--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Army bomb no preço acessivel</p>
     <h1>CLIQUE AQUI</h1>
     <h2>Compre seu ingresso para o SHOW do BTS</h2>
+    <H3>Dia 08/12 haverá um sorteio,não perca essa chance</H3>
 </body>
 </html>
