--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p>Army bomb no preço acessivel</p>
     <h1>CLIQUE AQUI</h1>
     <h2>Compre seu ingresso para o SHOW do BTS</h2>
-    <H3>Passaremos o show pelo Cinema</H3>
+    <H3>Passaremos o show pelo Cinema,e também no site Premier Filmes</H3>
 </body>
 </html>
