--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>army</title>
 </head>
 <body>
-    <p>Army bomb no preço acessivel</p>
+    <p>Series Coreanas no preço acessivel</p>
     <h1>CLIQUE AQUI</h1>
     <h2>Compre seu ingresso para o SHOW do BTS</h2>
     <H3>Passaremos o show pelo Cinema,e também no site Premier Filmes</H3>
