--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <p>Series Coreanas no preço acessivel</p>
     <h1>CLIQUE AQUI</h1>
-    <h2>Compre seu ingresso para o SHOW do BTS</h2>
+    <h2>Acesse ao nosso site oficial</h2>
     <H3>Passaremos o show pelo Cinema,e também no site Premier Filmes</H3>
 </body>
 </html>
