--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>army</title>
 </head>
 <body>
-    <p>Series Coreanas no preço acessivel</p>
+    <p>Series Coreanas,Tailandesa,Chinês,Japonesa no preço acessivel</p>
     <h1>CLIQUE AQUI</h1>
     <h2>Acesse ao nosso site oficial</h2>
-    <H3>Passaremos o show pelo Cinema,e também no site Premier Filmes</H3>
 </body>
 </html>
