--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Series Coreanas,Tailandesa,Chinês,Japonesa no preço acessivel</p>
     <h1>CLIQUE AQUI</h1>
     <h2>Acesse ao nosso site oficial</h2>
+    <h3>Venha participar da nossa ÁREA VIP</h3>
 </body>
 </html>
