--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css"
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>army</title>
+    <title>Army Cine</title>
 </head>
 <body>
     <p>Series Coreanas,Tailandesa,Chinês,Japonesa no preço acessivel</p>
